--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  @keyframes animate {
+    to {
+      transform: translateY(20px);
+    }
+  }
+
+  .animate {
+    animation: animate 2s infinite ease alternate;
+  }
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
